# deepdiver

./: .env.example  CLAUDE.md  DELIVERY_REPORT.md  FINAL_SUMMARY.txt  PROJECT_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.py  run.sh  supabase-export.sql  verify.sh
app/: __init__.py  config.py  db.py  extensions.py  tasks.py
app/agents/: tools.py  wilson.py
app/agents/curator/: agent.py  prompt.py  tools.py
app/agents/wilson/: agent.py
app/dashboard/: routes.py  utils.py
app/templates/: index.html
client/: Dockerfile  nginx.conf  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx
client/src/components/ui/: badge.tsx
client/src/pages/: Scanner.tsx  Trades.tsx
client/src/types/: index.ts
docs/: PROJECT_SUMMARY.md  TESTING.md  postgres-schema.sql  project_vision.md  supabase-schema.sql
docs/plans/: 2026-02-11-supabase-migration-design.md  2026-02-11-supabase-migration.md
tests/: README.md  __init__.py  conftest.py  test_curator_tools.py  test_supabase.py  test_utils.py
